
26 Jan 2011 JK
        - Enclosed #include config.h in %top{ } block in glb_lexer.l to fix
          another Mac compilation problems. I think Apple should pay
          me for the time I spend getting software to run on their system ;-)

********** This version tagged 3.1.10 ************

13 feb 2011 JK
        - Fixed Lexer problem with one-line comments ("//") that led to incorrect
          line counting
        - No error message if $emin or $sampling_min is zero

18 Feb 2011 JK
        - Fixed another small bug in the lexer - occasional syntax error when
          encountering empty "//" comments

21 Feb 2011 JK
        - One more problem with the line counting in the lexer fixed

4 Jan 2012 JK
        - First implementation of new multi-experiment systematics:
          sys()< > environment + new chi^2 function glbChiMultiExp
        - New #DETECTOR# directive

********** This version tagged 3.2.0 ************

28 Jan 2012 JK
        - Fixed problems with copying of efficiencies and smearing matrices to
          subdetector

********** This version tagged 3.2.1 ************

30 Jan 2012 JK
        - Fixed bug in treatment of nuisance parameters in child experiments
          (child did not inherit the current value of the parameter properly)

********** This version tagged 3.2.2 ************

8 May 2012 JK
        - (in branch newsys) A warning is now given if a rule with non-trivial
          systematics treatment is inherited from the parent experiment

********** This version tagged 3.2.3 ************

11 May 2012 JK
        - Increased max. number of channels, rules, etc. to 256

********** This version tagged 3.2.4 ************

11 May 2012 JK
        - #DETECTOR# directive no longer copies rules - caused a lot of confusion
        - Overloading existing environments should now work (still highly experimental
          though)

********** This version tagged 3.2.5 ************
