@@ -284,3 +284,7 @@
 
 ********** This version tagged 3.2.5 ************
 
+15 May 20120 JK
+        - Went back to max. 64 rules/channels etc. and 128 nuisance params.
+          Memory consumption was quite high otherwise
+
